# gedit-code-assistance

./: Makefile.am  NEWS  README  configure.ac  gedit-code-assistance.doap  git.mk
data/: Makefile.am  codeassistance.css  codeassistance.plugin.in  gedit-code-assistance.metainfo.xml  org.gnome.gedit.plugins.codeassistance.gschema.xml.in
indentbackends/: Makefile.am
indentbackends/c/: Makefile.am  gca-c-backend.vala  gcaindentbackendc.plugin
src/: Makefile.am  gca-app-activatable.vala  gca-backend-manager.vala  gca-backend.vala  gca-dbus.vala  gca-diagnostic-colors.vala  gca-diagnostic-message.vala  gca-diagnostic-tags.vala  gca-diagnostic.vala  gca-diagnostics.vala  gca-document.vala  gca-expand-range.vala  gca-indent-backend.vala  gca-log.vala  gca-plugin.vala  gca-remote-service.vala  gca-scrollbar-marker.vala  gca-semantic-value-support.vala  gca-semantic-value.vala  gca-source-index.vala  gca-source-location.vala  gca-source-range-support.vala  gca-source-range.vala  gca-symbol-browser-support.vala  gca-symbol-browser.vala  gca-unsaved-file.vala  gca-utils-c.c  gca-utils-c.h  gca-view-activatable.vala  gca-view.vala  gca-window-activatable.vala
vapi/: Makefile.am  config.vapi  gca-utils.vapi
vapi-gtksourceview/: Makefile.am
