geditcodeassistanceplugin_DATA = data/codeassistance.plugin
geditcodeassistancedata_DATA = data/codeassistance.css

metainfodir = $(datadir)/appdata
metainfo_DATA = data/gedit-code-assistance.metainfo.xml

EXTRA_DIST += \
	data/gedit-code-assistance.metainfo.xml \
	data/codeassistance.plugin \
	data/codeassistance.css

GITIGNOREDEPS += data/Makefile.am
